Fixed issue with images no wrapping down as the screen size changed

--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ select {
 	position: absolute;
 	min-height:800px;
 	padding-top:3em;
+	display: flex;
+    justify-content: center;
+	flex-wrap: wrap;	
 }
 
 #display {		
